# alphafold3_slurm_pipeline

./: .gitignore  LICENSE  README.md  af3_env_setup.sh  af3_install.slurm  environment.yml  modify_config.py  setup.cfg
alphafold3_slurm/: config.py  config.yaml  input_utils.py  stat_utils.py  wrapper.py
examples/: example.md  example_csv.csv  example_fasta.fa  make_both_script.sh  make_complex_script.sh  make_feature_script.sh
