[metadata]
name = alphafold3_slurm_pipeline
version = 0.0.1
author = Huaiyuan Ma
author_email = huaiyuan.ma@kaust.edu.sa
description = A wrapper for running AlphaFold in Slurm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahynotch/alphafold3_slurm_pipeline
license_files = LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
scripts =
    bin/run_alphafold
    bin/make_features
    bin/make_complexes
    bin/make_monomers